Add copywrite info

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -119,3 +119,13 @@ html, body {
     //text-color: #ffffff;
     color: #ffffff;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    //color: #ffffff;
+    //text-transform: none;
+    padding-bottom: 5px;
+    padding-right: 5px;
+}
