--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,9 @@
 
 
 </body>
+  <footer class= "footer" >
+    <small><p>Copyright &copy; Aaron Satchwill</p></small>
+  </footer>
   
 </html>
 </div>
